--- a/css/style.css
+++ b/css/style.css
@@ -1305,6 +1305,10 @@ button, input, select, textarea, label {
     }
 }
 
+#error-message, #sucess-message {
+    font-size: 16px;
+}
+
 #error-message {
     color: #ff0000;
 }
